felhasznalo és eseménynapló is globális változók nélkül

--- a/src/app/fooldal/fooldal.component.html
+++ b/src/app/fooldal/fooldal.component.html
@@ -5,7 +5,8 @@
   </div>
 </ng-container>
 <ng-container *ngIf="szerepkorkivalasztva">
-  <app-esemenynaplo></app-esemenynaplo>
+  <app-esemenynaplo [Felhasznalokod]="felhasznalokod">
+  </app-esemenynaplo>
 </ng-container>
 
 
