--- a/src/app/esemenynaplo/esemenynaplo.component.html
+++ b/src/app/esemenynaplo/esemenynaplo.component.html
@@ -18,7 +18,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of esemenynaploservice.Dto; let i = index">
+    <tr *ngFor="let item of Dto; let i = index">
       <td>{{item.Esemenynaplokod}}</td>
       <td>{{item.Idopont | datetimehun}}</td>
       <td>{{item.Particio}}</td>
@@ -28,8 +28,8 @@
     </tbody>
   </table>
   <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
-                     [rekordszam]="esemenynaploservice.Dto.length"
-                     [osszesrekord]="esemenynaploservice.OsszesRekord"
+                     [rekordszam]="Dto.length"
+                     [osszesrekord]="OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
   </app-toolbarfooter>
 </div>
