--- a/src/app/primitiv/felhasznalo/felhasznalo-list/felhasznalo-list.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-list/felhasznalo-list.component.html
@@ -5,11 +5,11 @@
                [(szempont)]="ekDto.szempont"
                [(minta)]="ekDto.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && jog" (Uj)="onUj()"
+               [enUj]="!eppFrissit && jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
   <app-tabla #tabla
-             [items]="felhasznaloservice.Dto"
+             [items]="Dto"
              [colsets]="felhasznaloservice.GridSettings"
              [zoom]="zoom"
              (forzoom)="onStartzoom($event)"
@@ -17,12 +17,76 @@
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #griduj>
     <app-felhasznalo-szerkesztes [uj] = "true"
-                                 (eventSzerkeszteskesz)="onUjkesz()">
+                                 (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-felhasznalo-szerkesztes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-felhasznalo-egy (eventTorlesutan)="onTorlesutan()"></app-felhasznalo-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(4)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Jelszó
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(5)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Tevékenység
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="felhasznaloservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="felhasznaloservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="felhasznaloservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-felhasznalo-szerkesztes [uj]="false"
+                                       [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                       (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-felhasznalo-szerkesztes>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="egymode === 4">
+        <div [@rowanimation]>
+          <app-felhasznalo-jelszo [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                  (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-felhasznalo-jelszo>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="egymode === 5">
+        <div [@rowanimation]>
+          <app-esemenynaplo [Felhasznalokod]="Dto[DtoSelectedIndex].Felhasznalokod">
+          </app-esemenynaplo>
+        </div>
+      </ng-container>
+    </div>
+
   </ng-template>
 </div>
