--- a/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
@@ -6,12 +6,12 @@
                [(szempont)]="ekDto.szempont"
                [(minta)]="ekDto.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && jog" (Uj)="onUj()"
+               [enUj]="!eppFrissit && jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
 
   <app-tabla #tabla
-             [items]="afakulcsservice.Dto"
+             [items]="Dto"
              [colsets]="afakulcsservice.GridSettings"
              [zoom]="zoom"
              (forzoom)="onStartzoom($event)"
@@ -19,13 +19,55 @@
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #griduj>
     <app-afakulcs-szerkesztes [uj] = "true"
-                              (eventSzerkeszteskesz)="onUjkesz()">
+                              (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-afakulcs-szerkesztes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-afakulcs-egy (eventTorlesutan)="onTorlesutan()"></app-afakulcs-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="afakulcsservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="afakulcsservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="afakulcsservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-afakulcs-szerkesztes [uj]="false"
+                                    [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                    (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-afakulcs-szerkesztes>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
 
