--- a/src/app/primitiv/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
@@ -5,11 +5,11 @@
                [(szempont)]="ekDto.szempont"
                [(minta)]="ekDto.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit" (Uj)="onUj()"
+               [enUj]="!eppFrissit" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
   <app-tabla #tabla
-             [items]="fizetesimodservice.Dto"
+             [items]="Dto"
              [colsets]="fizetesimodservice.GridSettings"
              [zoom]="zoom"
              (forzoom)="onStartzoom($event)"
@@ -17,12 +17,59 @@
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #griduj>
     <app-fizetesimod-szerkesztes [uj] = "true"
-                                 (eventSzerkeszteskesz)="onUjkesz()">
+                                 (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-fizetesimod-szerkesztes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-fizetesimod-egy (eventTorlesutan)="onTorlesutan()"></app-fizetesimod-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+        </nav>
+      </div>
+
+      <!--  export enum FiztesimodEgyMode {
+    Reszletek = 1,
+    Torles = 2,
+    Modositas = 3
+    }-->
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="fizetesimodservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="fizetesimodservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="fizetesimodservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-fizetesimod-szerkesztes [uj]="false"
+                                       [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                       (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-fizetesimod-szerkesztes>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
