--- a/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -15,7 +15,7 @@
 
     <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
