--- a/src/app/primitiv/penznem/penznem-list/penznem-list.component.html
+++ b/src/app/primitiv/penznem/penznem-list/penznem-list.component.html
@@ -5,11 +5,11 @@
                [(szempont)]="ekDto.szempont"
                [(minta)]="ekDto.minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && jog" (Uj)="onUj()"
+               [enUj]="!eppFrissit && jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
   <app-tabla #tabla
-             [items]="penznemservice.Dto"
+             [items]="Dto"
              [colsets]="penznemservice.GridSettings"
              [zoom]="zoom"
              (forzoom)="onStartzoom($event)"
@@ -17,12 +17,59 @@
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #griduj>
     <app-penznem-szerkesztes [uj] = "true"
-                             (eventSzerkeszteskesz)="onUjkesz()">
+                             (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-penznem-szerkesztes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-penznem-egy (eventTorlesutan)="onTorlesutan()"></app-penznem-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+        </nav>
+      </div>
+
+      <!--  export enum PenznemEgyMode {
+    Reszletek = 1,
+    Torles = 2,
+    Modositas = 3
+    }-->
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="penznemservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="penznemservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="penznemservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-penznem-szerkesztes [uj]="false"
+                                   [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                   (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-penznem-szerkesztes>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
