--- a/src/app/volume/volume-list/volume-list.component.html
+++ b/src/app/volume/volume-list/volume-list.component.html
@@ -1,13 +1,41 @@
 <div class="alapkeret">
   <h5>{{volumeservice.cim}}</h5>
   <app-tabla #tabla
-             [items]="volumeservice.Dto"
+             [items]="Dto"
              [colsets]="volumeservice.GridSettings"
-             (forid)="setClickedRow($event)"
+             (forid)="onId($event)"
              [egyTemplate]="gridegy">
   </app-tabla>
   <ng-template #gridegy>
-    <app-volume-egy></app-volume-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+
+          <button [disabled]="eppFrissit" (click)="doNav(17)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Ellenőrzés
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="volumeservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="volumeservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="egymode === 17">
+        <div [@rowanimation]>
+          <app-volume-teszt [Volumekod]="Dto[DtoSelectedIndex].Volumekod">
+          </app-volume-teszt>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
 
