cikk ügyfél ügyféltérlog ajánlatkérés globális változók nélkül

--- a/src/app/cikk/cikk-beszerzes-kivet/cikk-beszerzes-kivet.component.html
+++ b/src/app/cikk/cikk-beszerzes-kivet/cikk-beszerzes-kivet.component.html
@@ -4,7 +4,7 @@
 
   <app-tabla #tabla
              [items]="MozgasDto"
-             [colsets]="BeszerzesKivetGridSettings">
+             [colsets]="cikkservice.BeszerzesKivetGridSettings">
   </app-tabla>
 </div>
 
