--- a/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
@@ -1,25 +1,53 @@
 <div class="alapkeret">
   <h5>{{ajanlatkeresservice.cim}}</h5>
   <app-toolbar [Szurok]="szurok"
-               [(szempont)]="ajanlatkeresservice.szempont"
-               [(minta)]="ajanlatkeresservice.minta"
+               [(szempont)]="szempont"
+               [(minta)]="minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
                [visUj]="false">
   </app-toolbar>
 
   <app-tabla #tabla
-             [items]="ajanlatkeresservice.Dto"
+             [items]="Dto"
              [colsets]="ajanlatkeresservice.GridSettings"
-             (forid)="setClickedRow($event)"
+             (forid)="onId($event)"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #gridegy>
-    <app-ajanlatkeres-egy></app-ajanlatkeres-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button (click)="doNav(8)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Projekt
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="ajanlatkeresservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="ajanlatkeresservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="egymode === 8">
+        <div [@rowanimation]>
+          <app-ajanlatkeres-projekt [Email]="Dto[DtoSelectedIndex].Email">
+          </app-ajanlatkeres-projekt>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 
-  <app-toolbarfooter [enKereses]="!ajanlatkeresservice.elsokereses && !eppFrissit"
-                     [rekordszam]="ajanlatkeresservice.Dto.length"
-                     [osszesrekord]="ajanlatkeresservice.OsszesRekord"
+  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
+                     [rekordszam]="Dto.length"
+                     [osszesrekord]="OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
   </app-toolbarfooter>
 </div>
