--- a/src/app/ajanlatkeres/ajanlatkeres-projekt/ajanlatkeres-projekt.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-projekt/ajanlatkeres-projekt.component.html
@@ -1,4 +1,4 @@
 <div class="alapkeret">
   <h5>Korábbi projektek az email alapján</h5>
-  <app-projekt-tabla [Dto]="ajanlatkeresservice.ProjektDto" [enIdclick]="false"></app-projekt-tabla>
+  <app-projekt-tabla [Dto]="ProjektDto" [enIdclick]="false"></app-projekt-tabla>
 </div>
