--- a/src/app/cikk/cikk-list/cikk-list.component.html
+++ b/src/app/cikk/cikk-list/cikk-list.component.html
@@ -5,11 +5,11 @@
                [(szempont)]="szempont"
                [(minta)]="minta"
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && jog" (Uj)="onUj()"
+               [enUj]="!eppFrissit && jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
   <app-tabla #tabla
-             [items]="cikkservice.Dto"
+             [items]="Dto"
              [colsets]="cikkservice.GridSettings"
              [zoom]="zoom"
              (forzoom)="onStartzoom($event)"
@@ -17,16 +17,81 @@
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #griduj>
     <app-cikk-szerkesztes [uj] = "true"
-                          (eventSzerkeszteskesz)="onUjkesz()">
+                          (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-cikk-szerkesztes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-cikk-egy (eventTorlesutan)="onTorlesutan()"></app-cikk-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(28)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Beszerzés
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(29)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Kivét
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="cikkservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="cikkservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="cikkservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-cikk-szerkesztes [uj]="false"
+                                [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-cikk-szerkesztes>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="egymode === 28">
+        <div [@rowanimation]>
+          <app-cikk-beszerzes-kivet [Cikkkod]="Dto[DtoSelectedIndex].Cikkkod"
+                                    [BizonylattipusKod]="3">
+          </app-cikk-beszerzes-kivet>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="egymode === 29">
+        <div [@rowanimation]>
+          <app-cikk-beszerzes-kivet [Cikkkod]="Dto[DtoSelectedIndex].Cikkkod"
+                                    [BizonylattipusKod]="2">
+          </app-cikk-beszerzes-kivet>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
+
   <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
-                     [rekordszam]="cikkservice.Dto.length"
+                     [rekordszam]="Dto.length"
                      [osszesrekord]="osszesrekord"
                      (KeresesTovabb)="onKeresesTovabb()">
   </app-toolbarfooter>
