--- a/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
+++ b/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
@@ -12,24 +12,101 @@
   </app-ugyfeltoolbar>
 
   <app-ugyfel-tabla #tabla
-                    [items]="ugyfelservice.Dto"
+                    [items]="Dto"
                     [zoom]="zoom"
                     (forid)="onId($event)"
                     (forzoom)="onStartzoom($event)"
                     [ujTemplate]="griduj"
                     [egyTemplate]="gridegy">
   </app-ugyfel-tabla>
+
   <ng-template #griduj>
     <app-ugyfel-szerkesztes [uj] = "true"
                             (eventSzerkeszteskesz)="onUjkesz()">
     </app-ugyfel-szerkesztes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-ugyfel-egy (eventTorlesutan)="onTorlesutan()"></app-ugyfel-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(7)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Csoport
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(8)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Projekt
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(9)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Ügyféltér link
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(10)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            vCard
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="ugyfelservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="ugyfelservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="ugyfelservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-ugyfel-szerkesztes [uj]="false"
+                                  (eventSzerkeszteskesz)="onModositaskesz()">
+          </app-ugyfel-szerkesztes>
+        </div>
+      </ng-container>
+
+
+      <ng-container *ngIf="egymode === 7">
+        <div [@rowanimation]>
+          <app-ugyfel-csoport (eventSzerkeszteskesz)="onModositaskesz()">
+          </app-ugyfel-csoport>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 8">
+        <div [@rowanimation]>
+          <app-ugyfel-projekt></app-ugyfel-projekt>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 9">
+        <div [@rowanimation]>
+          <app-ugyfel-ter-link></app-ugyfel-ter-link>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 10">
+        <div [@rowanimation]>
+          <app-ugyfel-vcard (LetoltesClick)="VcardLetoles()">
+          </app-ugyfel-vcard>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 
   <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
-                     [rekordszam]="ugyfelservice.Dto.length"
+                     [rekordszam]="Dto.length"
                      [osszesrekord]="osszesrekord"
                      (KeresesTovabb)="onKeresesTovabb()">
   </app-toolbarfooter>
