partíció cikk ügyfél ügyféltérlog ajánlatkérés globális változók nélkül

--- a/src/app/particio/particio-egy/particio-egy.component.html
+++ b/src/app/particio/particio-egy/particio-egy.component.html
@@ -37,42 +37,42 @@
   }-->
 
 
-  <ng-container *ngIf="particioservice.EgyMode === 1">
+  <ng-container *ngIf="EgyMode === 1">
     <app-particio-szallito [eppFrissit]="eppFrissit"
                            [Dto]="Dto"
                            (OkClick)="SzerkesztesOk($event)"
                            (CancelClick)="SzerkesztesCancel()">
     </app-particio-szallito>
   </ng-container>
-  <ng-container *ngIf="particioservice.EgyMode === 2">
+  <ng-container *ngIf="EgyMode === 2">
     <app-particio-nav [eppFrissit]="eppFrissit"
                       [Dto]="Dto"
                       (OkClick)="SzerkesztesOk($event)"
                       (CancelClick)="SzerkesztesCancel()">
     </app-particio-nav>
   </ng-container>
-  <ng-container *ngIf="particioservice.EgyMode === 3">
+  <ng-container *ngIf="EgyMode === 3">
     <app-particio-smtp [eppFrissit]="eppFrissit"
                        [Dto]="Dto"
                        (OkClick)="SzerkesztesOk($event)"
                        (CancelClick)="SzerkesztesCancel()">
     </app-particio-smtp>
   </ng-container>
-  <ng-container *ngIf="particioservice.EgyMode === 4">
+  <ng-container *ngIf="EgyMode === 4">
     <app-particio-bizonylat [eppFrissit]="eppFrissit"
                             [Dto]="Dto"
                             (OkClick)="SzerkesztesOk($event)"
                             (CancelClick)="SzerkesztesCancel()">
     </app-particio-bizonylat>
   </ng-container>
-  <ng-container *ngIf="particioservice.EgyMode === 5">
+  <ng-container *ngIf="EgyMode === 5">
     <app-particio-projekt [eppFrissit]="eppFrissit"
                           [Dto]="Dto"
                           (OkClick)="SzerkesztesOk($event)"
                           (CancelClick)="SzerkesztesCancel()">
     </app-particio-projekt>
   </ng-container>
-  <ng-container *ngIf="particioservice.EgyMode === 6">
+  <ng-container *ngIf="EgyMode === 6">
     <app-particio-volume [eppFrissit]="eppFrissit"
                          [Dto]="Dto"
                          (OkClick)="SzerkesztesOk($event)"
