--- a/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
+++ b/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
@@ -4,38 +4,33 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Bizonylatkép iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m1"
+      <div>
+        <div class="egylabel">Bizonylatkép iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m1"
                autocomplete="off"
                [(ngModel)]="Dto.BizonylatBizonylatkepIratkod" name="m1">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Eredeti példány</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m2"
+      <div>
+        <div class="egylabel">Eredeti példány</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m2"
                autocomplete="off"
                [(ngModel)]="Dto.BizonylatEredetipeldanyokSzama" name="m2">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Másolatok</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m3"
+      <div>
+        <div class="egylabel">Másolatok</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m3"
                autocomplete="off"
                [(ngModel)]="Dto.BizonylatMasolatokSzama" name="m3">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
