--- a/src/app/particio/particio-projekt/particio-projekt.component.html
+++ b/src/app/particio/particio-projekt/particio-projekt.component.html
@@ -2,99 +2,89 @@
   <h5>Projekt</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-3">
-        <div class="editform-title">Ajánlat iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m1"
+      <div>
+        <div class="egylabel">Ajánlat iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m1"
                autocomplete="off"
                [(ngModel)]="Dto.ProjektAjanlatIratkod" name="m1">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-3">
-        <div class="editform-title">Elégedettségi felmérés iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m2"
+      <div>
+        <div class="egylabel">Elégedettségi felmérés iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m2"
                autocomplete="off"
                [(ngModel)]="Dto.ProjektElegedettsegifelmeresIratkod" name="m2">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-3">
-        <div class="editform-title">Készrejelentés NKM iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m3"
+      <div>
+        <div class="egylabel">Készrejelentés NKM iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m3"
                autocomplete="off"
                [(ngModel)]="Dto.ProjektKeszrejelentesDemaszIratkod" name="m3">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-3">
-        <div class="editform-title">Készrejelentés ELMŰ-ÉMÁSZ iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m4"
+      <div>
+        <div class="egylabel">Készrejelentés ELMŰ-ÉMÁSZ iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m4"
                autocomplete="off"
                [(ngModel)]="Dto.ProjektKeszrejelentesElmuemaszIratkod" name="m4">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-3">
-        <div class="editform-title">Készrejelentés E.ON iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m5"
+      <div>
+        <div class="egylabel">Készrejelentés E.ON iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m5"
                autocomplete="off"
                [(ngModel)]="Dto.ProjektKeszrejelentesEonIratkod" name="m5">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-3">
-        <div class="editform-title">Munkalap iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m6"
+      <div>
+        <div class="egylabel">Munkalap iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m6"
                autocomplete="off"
                [(ngModel)]="Dto.ProjektMunkalapIratkod" name="m6">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-3">
-        <div class="editform-title">Szállítási szerződés iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m7"
+      <div>
+        <div class="egylabel">Szállítási szerződés iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m7"
                autocomplete="off"
                [(ngModel)]="Dto.ProjektSzallitasiszerzodesIratkod" name="m7">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-3">
-        <div class="editform-title">Szerződés iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m8"
+      <div>
+        <div class="egylabel">Szerződés iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m8"
                autocomplete="off"
                [(ngModel)]="Dto.ProjektSzerzodesIratkod" name="m8">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-3">
-        <div class="editform-title">Feltételes szerződés iratkód</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="m9"
+      <div>
+        <div class="egylabel">Feltételes szerződés iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m9"
                autocomplete="off"
                [(ngModel)]="Dto.ProjektFeltetelesszerzodesIratkod" name="m9">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-3"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
