--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -2,29 +2,26 @@
   <h5>Volume</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Új volume max. méret</div>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="m1"
+      <div>
+        <div class="egylabel">Új volume max. méret</div>
+        <input type="number" class="form-control form-control-sm oszlop3" id="m1"
                autocomplete="off"
                [(ngModel)]="Dto.VolumeUjvolumeMaxmeret" name="m1">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Új volume elérési út</div>
-      </div>
-      <div class="col-md-5">
-        <input type="text" class="form-control form-control-sm" id="m2"
+      <div>
+        <div class="egylabel">Új volume elérési út</div>
+        <input type="text" class="form-control form-control-sm oszlop6" id="m2"
                autocomplete="off"
                [(ngModel)]="Dto.VolumeUjvolumeEleresiut" name="m2">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
