--- a/src/app/ugyfel/ugyfel-vcard/ugyfel-vcard.component.html
+++ b/src/app/ugyfel/ugyfel-vcard/ugyfel-vcard.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Név:</td>
-      <td>{{DtoEdited.Nev}}</td>
+      <td>{{Dto.Nev}}</td>
     </tr>
     <tr>
       <td class="egylabel">Cég:</td>
-      <td>{{DtoEdited.Ceg}}</td>
+      <td>{{Dto.Ceg}}</td>
     </tr>
     <tr>
       <td class="egylabel">Beosztás:</td>
-      <td>{{DtoEdited.Beosztas}}</td>
+      <td>{{Dto.Beosztas}}</td>
     </tr>
     <tr>
       <td class="egylabel">Cím:</td>
-      <td>{{DtoEdited.Iranyitoszam}} {{DtoEdited.Helysegnev}}, {{DtoEdited.Kozterulet}} {{DtoEdited.Kozterulettipus}} {{DtoEdited.Hazszam}}</td>
+      <td>{{Dto.Iranyitoszam}} {{Dto.Helysegnev}}, {{Dto.Kozterulet}} {{Dto.Kozterulettipus}} {{Dto.Hazszam}}</td>
     </tr>
     <tr>
       <td class="egylabel">Telefon:</td>
-      <td>{{DtoEdited.Telefon}}</td>
+      <td>{{Dto.Telefon}}</td>
     </tr>
     <tr>
       <td class="egylabel">Email:</td>
-      <td>{{DtoEdited.Email}}</td>
+      <td>{{Dto.Email}}</td>
     </tr>
     </tbody>
   </table>
