--- a/src/app/penztar/penztar-export/penztar-export.component.html
+++ b/src/app/penztar/penztar-export/penztar-export.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>Pénztártételek exportja</h5>
 
-  <form #f="ngForm" (ngSubmit)="submit()">
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
       <div>
@@ -21,7 +21,7 @@
 
     <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="megsem()">Mégsem</button>
+      <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
