--- a/src/app/penztar/penztar-list/penztar-list.component.html
+++ b/src/app/penztar/penztar-list/penztar-list.component.html
@@ -7,19 +7,83 @@
                [enUj]="!eppFrissit && jog" (Uj)="onUj()">
   </app-toolbar>
   <app-tabla #tabla
-             [items]="penztarservice.Dto"
+             [items]="Dto"
              [colsets]="penztarservice.GridSettings"
              (forid)="onId($event)"
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #griduj>
     <app-penztar-szerkesztes [uj] = "true"
-                             (eventSzerkeszteskesz)="onUjkesz()">
+                             (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-penztar-szerkesztes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-penztar-egy (eventTorlesutan)="onTorlesutan()"></app-penztar-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog || !nyitva"
+                  (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit || !jog || !nyitva"
+                  (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+
+          <button [disabled]="eppFrissit" (click)="doNav(13)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Tételek
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(14)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Export
+          </button>
+        </nav>
+      </div>
+
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="penztarservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="penztarservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="penztarservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-penztar-szerkesztes [uj]="false"
+                                   [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                   (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-penztar-szerkesztes>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="egymode === 13">
+        <div [@rowanimation]>
+          <app-penztartetel-list [Penztarkod]="Dto[DtoSelectedIndex].Penztarkod">
+          </app-penztartetel-list>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 14">
+        <div [@rowanimation]>
+          <app-penztar-export [Penztarkod]="Dto[DtoSelectedIndex].Penztarkod">
+          </app-penztar-export>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
 
