--- a/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -1,8 +1,6 @@
 <div class="alapkeret">
   <h5>{{dokumentumservice.cim}} feltöltés</h5>
 
-  <!--<img id="blah" style="max-width: 200px" [src]="imageSrc || 'http://placehold.it/180'" alt="your image" />-->
-
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
@@ -23,7 +21,7 @@
 
     <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="file === undefined || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
