--- a/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
+++ b/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
@@ -1,25 +1,69 @@
 <div class="alapkeret">
   <h5>{{dokumentumservice.cim}}</h5>
   <nav>
-    <button [disabled]="eppFrissit" (click)="onUj()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-      Feltöltés
+    <button [disabled]="eppFrissit" (click)="onKereses()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <i class="fa fa-search" aria-hidden="true"></i>
+    </button>
+    <button [disabled]="eppFrissit" (click)="doUjtetel()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <i class="fa fa-plus" aria-hidden="true"></i>
     </button>
   </nav>
 
   <app-tabla #tabla
-             [items]="dokumentumservice.Dto"
+             [items]="Dto"
              [colsets]="dokumentumservice.GridSettings"
              [letoltes]="true"
              (forid)="onId($event)"
-             (fordownload)="letoltes($event)"
+             (fordownload)="onLetoltesDirekt($event)"
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #griduj>
-    <app-dokumentum-feltoltes (eventSzerkeszteskesz)="onUjkesz()">
+    <app-dokumentum-feltoltes [Iratkod]="Iratkod"
+                              (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-dokumentum-feltoltes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-dokumentum-egy (eventTorlesutan)="onTorlesutan()"></app-dokumentum-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit" (click)="onLetoltes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Letöltés
+          </button>
+          <button [disabled]="eppFrissit" (click)="onLetoltesPDF()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            PDF
+          </button>
+        </nav>
+      </div>
+
+      <!--  export enum DokumentumEgyMode {
+        Reszletek = 1,
+        Torles = 2,
+        }-->
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="dokumentumservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="dokumentumservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="dokumentumservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
