--- a/src/app/irat/irat-list/irat-list.component.html
+++ b/src/app/irat/irat-list/irat-list.component.html
@@ -27,8 +27,11 @@
   </ng-template>
 
   <ng-template #gridegy>
-    <app-irat-egy [enProjekt]="enProjekt"
-                  (eventTorlesutan)="torlesutan()">
+    <app-irat-egy [DtoOriginal]="Dto[DtoSelectedIndex]"
+                  [enTorles]="true"
+                  [enProjekt]="enProjekt"
+                  (eventSzerkesztesutan)="onSzerkesztesutan($event)"
+                  (eventTorlesutan)="onTorlesutan()">
     </app-irat-egy>
   </ng-template>
 
