--- a/src/app/projektkapcsolat/projektkapcsolat-tabla/projektkapcsolat-tabla.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-tabla/projektkapcsolat-tabla.component.html
@@ -12,6 +12,22 @@
   </tr>
   </thead>
   <tbody>
+    <tr *ngIf="vagolaprolOk && egyVagolaprol !== undefined" class="active">
+      <td colspan="100">
+        <ng-template *ngTemplateOutlet="egyVagolaprol"></ng-template>
+      </td>
+    </tr>
+    <tr *ngIf="ujbizonylatOk && egyUjbizonylat !== undefined" class="active">
+      <td colspan="100">
+        <ng-template *ngTemplateOutlet="egyUjbizonylat"></ng-template>
+      </td>
+    </tr>
+    <tr *ngIf="ujiratOk && egyUjirat !== undefined" class="active">
+      <td colspan="100">
+        <ng-template *ngTemplateOutlet="egyUjirat"></ng-template>
+      </td>
+    </tr>
+
     <ng-container *ngFor="let item of items; let i = index">
       <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
         <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer;padding-left: 8px;padding-right: 8px"
@@ -39,6 +55,11 @@
       <tr *ngIf="i === clickedidindex && iratOk" [class.active]="i === clickedidindex">
         <td colspan="100">
           <ng-template *ngTemplateOutlet="egyIrat"></ng-template>
+        </td>
+      </tr>
+      <tr *ngIf="i === clickedidindex && levalasztasOk" [class.active]="i === clickedidindex">
+        <td colspan="100">
+          <ng-template *ngTemplateOutlet="egyLevalasztas"></ng-template>
         </td>
       </tr>
     </ng-container>
